fix craft with barrels